css/main.css
@charset "UTF-8";
/*
    SWICC

    Deveolped by Dmytro Nechepurenko. Distributed by GNU GPL v.2.
    Based on work André Griffin (http://andregriffin.com).
    Some parts are based on works Stefan Nitzsche, Yahoo UI, Josh Hopkins and others.

========================================================================
[Table of contents]

 0.Reset
 1.Basic
   -Lists and tables
   -Forms and inputs
   -Specific
   -Fixes for basic
 2.Layout
 3.Main
 4.Sidebars
 5.Header
 6.Navigation
 7.Messages
 8.Nodes
 9.Comments
10.Blocks
11.Footer
12.Views
13.Media Queries
14.Other
   -Css support
   -Load overlay

========================================================================
*/

/* ======================== 0.RESET ================================= */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    font-size: 100%;
    font-weight: normal;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}

/* remove this because real user don`t format this way */
blockquote, q {
    quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
}

/* ========================= 1.BASIC ================================ */

/* fonts first  */
@font-face {
    font-family: 'Open Sans Light';
    src: url('../fonts/opensans-light/opensans-light-webfont.eot');
    src: url('../fonts/opensans-light/opensans-light-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/opensans-light/opensans-light-webfont.woff') format('woff'), url('../fonts/opensans-light/opensans-light-webfont.ttf') format('truetype'), url('../fonts/opensans-light/opensans-light-webfont.svg#OpenSansLight') format('svg');
    font-weight: lighter;
    font-style: normal;
}

/* end fonts */

body {
    background-color: #fff;
    color: #3a3739;
    font: normal normal 87.5%/1.714em 'Open Sans', 'Segoe UI', 'Droid Sans', Tahoma, 'Liberation Sans', sans-serif;
    overflow-x: hidden;
    overflow-y: scroll; /* force scrollbar */
}

/* typography then */

h1, h2, .h1, .h2 {
    font: normal lighter 100%/1.286em 'Open Sans Light', 'DejaVu Sans UltraLight', 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Segoe WPC Light', 'Segoe UI Light', 'Segoe UI', Arial, sans-serif;
}

h3, h4, h5, h6, .h3, .h4, .h5, .h6 {
}

h1, .h1 {
    font-size: 4em;
    margin: .286em 0 .643em;
}

h1+p {
    margin-top: 1.5em;
}

h2, .h2 {
    font-size: 2em;
    margin: .9em 0 .643em;
}

h3, .h3 {
    font-size: 1.429em;
    line-height: 1.429em;
    font-weight: bold;
    margin: 1.3em 0 .7em;
}

h4, h5, h6, .h4, .h5, .h6 {
    font-size: 1.1em;
    font-weight: bold;
    line-height: 1.429em;
    margin: 1.5em 0 .429em;
}

h4, .h4 {
    font-size: 1.2em;
    font-style: italic;
    margin: 1.3em 0 .7em;
}

h6, .h6 {
    font-weight: normal;
    font-style: italic;
}

p, pre, blockquote, table {
    margin: 0 0 1em 0;
}

p {
    font-size: 1em;
    line-height: 1.714em;
}

/*p:before {
    content: "¶";
    color: #c10000;
}*/

blockquote {
    margin-left: 4.2em;
    font-style: italic;
}

strong, b {
    font-weight: bold;
}

em, i, cite {
    font-style: italic;
}

/* NOTE: link pseudoclases order -- link, visited, hover, active */

a:link {
    color: inherit;
}

a:visited {
    color: inherit;
}

a:hover, a:active {
    color: #c10000;
    outline: none;
}

/* ======================== lists and tables ======================== */

ul, ol, dl {
    margin: 0 1.5em 1.5em 0;
    padding-left: 1.5em;
}

ul li {
    list-style: disc outside;
}

ol li {
    list-style: decimal outside;
}

ul li,
ol li {
    margin: .357em 0 .357em 1.5em;
}

dl dt, dfn {
    font-weight: bold;
    font-style: italic;
}

dl dd {
    margin-left: 1.5em;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;
}

th, tr, td {
    vertical-align: middle;
    padding: 0 .429em;
}

thead tr td, th {
    font-weight: bold;
}

caption {
    font-size: 1.429em;
    padding-bottom: .429em;
    border-bottom: 1px solid #ccc;
}

th {
    border-right: 1px solid #ccc;
    border-bottom: inherit; /* override default Drupal system style */
}

thead tr {
    border-bottom: 1px solid #ccc;
}

tbody {
    border-top: 1px solid #ccc;
}

tbody tr {
    border-bottom: 1px solid #e3e3e3;
}

tfoot {
    text-align: center;
    font-style: italic;
    border-top: 1px solid #ccc;
}

tbody tr:nth-child(even) {
    background-color: #eee;
}

td[colspan] {
    text-align: center;
}

/* Drupal specific */

ul li.leaf {
    list-style: square none outside;
}

.sticky-header th, .sticky-table th {
    border-bottom: 3px solid #ccc;
    padding-right: 1em;
    text-align: left;
}

/* ======================= forms and inputs ========================= */

form {
}

input, select {
    font: inherit;
}

input[type="button"],
input[type="submit"],
input[type="image"], button {
    cursor: pointer; /* when button hover not so different in look - need this */
}

input[type="text"],
input[type="password"],
textarea {
    padding: 0 .2em;
}

input[type="radio"] {
    vertical-align: text-top;
}

input[type="checkbox"] {
    vertical-align: baseline;
}

select {
}

optgroup {
    font-weight: normal;
    background: #ccc;
}

textarea {
    font: normal normal 1em/1.429em Arial, Helvetica, FreeSans, 'Liberation Sans', sans-serif;
    color: #3a3739;
    padding: .2em .429em;
}

label {
    display: block;
    font-weight: normal;
}
/* ... */

